flux/apps/photos/immich_microservices_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-microservices
  namespace: photos
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: microservices
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: microservices
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: microservices
        app.kubernetes.io/instance: immich
    spec:
      containers:
        - name: immich-microservices
          image: registry.lab.reisman.org/proxy.ghcr.io/immich-app/immich-server:v1.105.1
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
          args:
            - ./start-microservices.sh
          volumeMounts:
            - name: geodata-cache
              mountPath: /geodata-cache
            - name: library
              mountPath: /usr/src/app/upload/library
            - name: upload
              mountPath: /usr/src/app/upload/upload
            - name: encoded-video
              mountPath: /usr/src/app/upload/encoded-video
            - name: profile
              mountPath: /usr/src/app/upload/profile
            - name: thumbs
              mountPath: /usr/src/app/upload/thumbs
      volumes:
        - name: geodata-cache
          emptyDir: {}
        - name: library
          nfs:
            server: 192.168.1.10
            path: /mnt/main/cloud/photos/library
        - name: upload
          nfs:
            server: 192.168.1.10
            path: /mnt/main/cloud/photos/upload
        - name: encoded-video
          persistentVolumeClaim:
            claimName: immich-encoded-video
        - name: profile
          persistentVolumeClaim:
            claimName: immich-profile
        - name: thumbs
          persistentVolumeClaim:
            claimName: immich-thumbs
