flux/apps/photos/immich_proxy_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-proxy
  namespace: photos
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: proxy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: proxy
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: proxy
        app.kubernetes.io/instance: immich
    spec:
      containers:
        - name: immich-proxy
          image: registry.lab.reisman.org/proxy.ghcr.io/immich-app/immich-proxy:v1.53.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
