flux/apps/photos/immich_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-server
  namespace: photos
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: server
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: server
        app.kubernetes.io/instance: immich
    spec:
      containers:
        - name: immich-server
          image: registry.lab.reisman.org/proxy.ghcr.io/immich-app/immich-server:v1.101.0
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
          args:
            - ./start-server.sh
          ports:
            - name: http
              containerPort: 3001
              protocol: TCP
          volumeMounts:
            - name: library
              mountPath: /usr/src/app/upload/library
            - name: upload
              mountPath: /usr/src/app/upload/upload
            - name: encoded-video
              mountPath: /usr/src/app/upload/encoded-video
            - name: profile
              mountPath: /usr/src/app/upload/profile
            - name: thumbs
              mountPath: /usr/src/app/upload/thumbs
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /server-info/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /server-info/ping
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
      volumes:
        - name: library
          nfs:
            server: 192.168.1.10
            path: /mnt/main/cloud/photos/library
        - name: upload
          nfs:
            server: 192.168.1.10
            path: /mnt/main/cloud/photos/upload
        - name: encoded-video
          persistentVolumeClaim:
            claimName: immich-encoded-video
        - name: profile
          persistentVolumeClaim:
            claimName: immich-profile
        - name: thumbs
          persistentVolumeClaim:
            claimName: immich-thumbs
