flux/apps/photos/immich_typesense_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-typesense
  namespace: photos
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: typesense
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: typesense
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: typesense
        app.kubernetes.io/instance: immich
    spec:
      #serviceAccountName: default
      #automountServiceAccountToken: true
      #dnsPolicy: ClusterFirst
      #enableServiceLinks: true
      containers:
        - name: immich-typesense
          image: registry.lab.reisman.org/proxy.docker.io/typesense/typesense:0.24.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8108
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 0
            periodSeconds: 10
            timeoutSeconds: 1
