flux/apps/photos/immich_web_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-web
  namespace: photos
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: web
      app.kubernetes.io/instance: immich
  template:
    metadata:
      labels:
        app.kubernetes.io/name: web
        app.kubernetes.io/instance: immich
    spec:
      containers:
        - name: immich-web
          image: registry.lab.reisman.org/proxy.ghcr.io/immich-app/immich-web:v1.84.0
          imagePullPolicy: IfNotPresent
          command:
            - "/bin/sh"
          args:
            - ./entrypoint.sh
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 30
            initialDelaySeconds: 0
            periodSeconds: 5
            tcpSocket:
              port: 3000
            timeoutSeconds: 1
