flux/apps/photos/immich_typesense_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-typesense
  namespace: photos
  labels:
    app.kubernetes.io/service: immich-typesense
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: typesense
spec:
  type: ClusterIP
  ports:
    - port: 8108
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: typesense
