flux/apps/photos/immich_web_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-web
  namespace: photos
  labels:
    app.kubernetes.io/service: immich-web
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: web
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: web
